Adding ability to edit existing players.

--- a/ScoreCard/res/layout/fragment_players.xml
+++ b/ScoreCard/res/layout/fragment_players.xml
@@ -20,6 +20,8 @@
 	<ListView 
         android:id="@+id/player_menu_player_list"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
+        android:layout_height="wrap_content"
+        android:divider="@null"
+		android:dividerHeight="@dimen/list_view_divider_height" />
 
 </LinearLayout>
