--- a/ScoreCard/res/layout/list_item_player.xml
+++ b/ScoreCard/res/layout/list_item_player.xml
@@ -2,10 +2,12 @@
     android:id="@+id/fragmentContainer"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="horizontal" >
+    android:orientation="horizontal" 
+    android:background="@drawable/list_item_bg">
 
     <TextView
         android:id="@+id/list_player_name"
-        style="@style/text_primary" />
+        style="@style/text_secondary"
+        android:layout_margin="@dimen/margin_size_medium" />
 
 </LinearLayout>
