--- a/ScoreCard/res/values/dimens.xml
+++ b/ScoreCard/res/values/dimens.xml
@@ -14,4 +14,7 @@
     <dimen name="text_size_secondary">20sp</dimen>
     <dimen name="text_size_tertiary">12sp</dimen>
 
+    <!-- list views -->
+    <dimen name="list_view_divider_height">0dp</dimen>
+
 </resources>
