--- a/ScoreCard/res/layout/fragment_players.xml
+++ b/ScoreCard/res/layout/fragment_players.xml
@@ -14,6 +14,7 @@
         android:id="@+id/player_menu_button_new_player"
         style="@style/button_primary"
         android:layout_width="match_parent"
+        android:layout_height="wrap_content"
         android:layout_margin="@dimen/margin_size_small"
         android:text="@string/new_player" />
 
