--- a/ScoreCard/res/drawable/button_bg_disabled.xml
+++ b/ScoreCard/res/drawable/button_bg_disabled.xml
@@ -1,5 +1,5 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
     <solid android:color="@color/button_bg_disabled" />
-    <stroke android:color="@color/button_bg_border_disabled" android:width="3dp"/>
-    <corners android:radius="7dp" />
+    <stroke android:color="@color/button_bg_border_disabled" android:width="@dimen/button_stroke_width"/>
+    <corners android:radius="@dimen/button_corner_radius" />
 </shape>
