--- a/ScoreCard/res/layout/fragment_courses.xml
+++ b/ScoreCard/res/layout/fragment_courses.xml
@@ -14,6 +14,7 @@
         android:id="@+id/courses_menu_button_new_course"
         style="@style/button_primary"
         android:layout_width="match_parent"
+        android:layout_height="wrap_content"
         android:layout_margin="@dimen/margin_size_small"
         android:text="@string/new_course" />
 
