--- a/ScoreCard/res/layout/fragment_edit_course.xml
+++ b/ScoreCard/res/layout/fragment_edit_course.xml
@@ -5,17 +5,17 @@
     android:gravity="center_horizontal" >
 
     <TextView
-            android:id="@+id/edit_course_menu_title_text_view"
-            style="@style/text_title"
-            android:text="@string/edit_course" />
+        android:id="@+id/edit_course_menu_title_text_view"
+        style="@style/text_title"
+        android:text="@string/edit_course" />
 
     <TextView
-            android:id="@+id/edit_course_menu_name_text_view"
-            style="@style/text_secondary"
-            android:layout_below="@id/edit_course_menu_title_text_view"
-            android:text="@string/name" />
-    
-    <EditText 
+        android:id="@+id/edit_course_menu_name_text_view"
+        style="@style/text_secondary"
+        android:layout_below="@id/edit_course_menu_title_text_view"
+        android:text="@string/name" />
+
+    <EditText
         android:id="@+id/edit_course_menu_name_edit_text"
         style="@style/edit_text_primary"
         android:layout_width="match_parent"
@@ -24,11 +24,43 @@
         android:inputType="textPersonName" />
 
     <TextView
+        android:id="@+id/edit_course_menu_holes_label"
+        style="@style/text_secondary"
+        android:layout_below="@id/edit_course_menu_name_edit_text"
+        android:text="@string/holes_label" />
+
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/edit_course_menu_holes_label"
+        android:layout_marginLeft="@dimen/margin_size_medium"
+        android:layout_marginRight="@dimen/margin_size_medium" >
+
+        <TextView
+            android:id="@+id/edit_course_menu_holes_text_view"
+            style="@style/text_view_secondary" />
+
+        <TextView
+            android:id="@+id/edit_course_menu_decrement_holes_button"
+            style="@style/button_primary"
+            android:layout_toLeftOf="@+id/edit_course_menu_increment_holes_button"
+            android:layout_marginRight="@dimen/margin_size_medium"
+            android:text="@string/decrement" />
+
+        <TextView
+            android:id="@id/edit_course_menu_increment_holes_button"
+            style="@style/button_primary"
+            android:layout_alignParentRight="true"
+            android:text="@string/increment" />
+    </RelativeLayout>
+
+    <TextView
         android:id="@+id/edit_course_menu_button_save"
         style="@style/button_primary"
         android:layout_width="match_parent"
-        android:layout_margin="@dimen/margin_size_small"
+        android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
+        android:layout_margin="@dimen/margin_size_small"
         android:text="@string/save" />
 
 </RelativeLayout>
