--- a/ScoreCard/res/drawable/list_item_bg.xml
+++ b/ScoreCard/res/drawable/list_item_bg.xml
@@ -3,6 +3,9 @@
           android:state_pressed="true"
           android:drawable="@drawable/list_item_bg_pressed"/>
     <item android:state_enabled="true"
+          android:state_activated="true"
+          android:drawable="@drawable/list_item_bg_activated"/>
+    <item android:state_enabled="true"
           android:drawable="@drawable/list_item_bg_enabled"/>
     <item android:drawable="@drawable/list_item_bg_disabled"/>
 </selector>
