--- a/ScoreCard/res/values/colors.xml
+++ b/ScoreCard/res/values/colors.xml
@@ -22,6 +22,7 @@
 	<color name="list_item_bg_enabled">@color/black</color>
 	<color name="list_item_bg_disabled">@color/dark_grey</color>
 	<color name="list_item_bg_pressed">@color/dark_blue</color>
+	<color name="list_item_bg_activated">@color/dark_blue</color>
 
 	<!-- text view -->
 	<color name="text_view_bg_enabled">@color/black</color>
