--- a/ScoreCard/res/layout/fragment_scorecard.xml
+++ b/ScoreCard/res/layout/fragment_scorecard.xml
@@ -6,8 +6,7 @@
 
     <TextView
         android:id="@+id/scorecard_course_label"
-        style="@style/text_subtitle"
-        android:text="Overlook" />
+        style="@style/text_subtitle" />
 
     <TextView
         android:id="@+id/scorecard_hole_label"
@@ -21,8 +20,7 @@
         style="@style/text_secondary"
         android:layout_below="@id/scorecard_course_label"
         android:layout_marginRight="@dimen/margin_size_medium"
-        android:layout_toLeftOf="@+id/scorecard_par_label"
-        android:text="2" />
+        android:layout_toLeftOf="@+id/scorecard_par_label" />
 
     <TextView
         android:id="@id/scorecard_par_label"
@@ -36,8 +34,7 @@
         style="@style/text_secondary"
         android:layout_below="@id/scorecard_course_label"
         android:layout_marginRight="@dimen/margin_size_medium"
-        android:layout_toLeftOf="@+id/scorecard_previous_hole_button"
-        android:text="3" />
+        android:layout_toLeftOf="@+id/scorecard_previous_hole_button" />
 
     <TextView
         android:id="@id/scorecard_previous_hole_button"
@@ -54,12 +51,10 @@
         android:layout_below="@id/scorecard_course_label"
         android:text="@string/increment" />
 
-    <ListView
-        android:id="@+id/scorecard_player_list"
+    <android.support.v4.view.ViewPager
+        android:id="@+id/scorecard_player_pager"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_below="@id/scorecard_previous_hole_button"
-        android:divider="@null"
-        android:dividerHeight="@dimen/list_view_divider_height" />
+        android:layout_below="@id/scorecard_next_hole_button" />
 
 </RelativeLayout>
