Fixing bug that failed to load scores correctly when editting a scorecard.

--- a/ScoreCard/res/layout/fragment_scorecards.xml
+++ b/ScoreCard/res/layout/fragment_scorecards.xml
@@ -8,7 +8,7 @@
     <TextView
             android:id="@+id/scorecard_menu_title_text_view"
             style="@style/text_title"
-            android:text="@string/players" />
+            android:text="@string/scorecards" />
 
 	<ListView 
         android:id="@+id/scorecard_menu_scorecard_list"
